--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
                     <div class="content" style="margin-left: 18px;">
                         <article>
                             <h3 style="margin-top: 0; margin-bottom: 0;">
-                                a . louise
+                              a <span style="color: #FF0000;">.</span> louise
                             </h3>
 
                             <p>
-                            [ <a href='/resume'>resume</a><a style="margin-left: 9px;" href="full-resume.pdf">&#9781;</a><br/>
-                            , <a href='/readme'>readme</a><br/>
-                            , <a href='https://github.com/thelastinuit'>github</a><br/>
-                            , <a href='https://blog.aloui.se'>blog</a><br/> 
-                            , <a href='https://www.youtube.com/@thelastinuit'>vlog</a><br/>
-                            ]
+                            <span style="color: #FF0000;">[</span> <a href='/resume'>resume</a><a style="margin-left: 9px;color:#FF0000;" href="full-resume.pdf">&#9781;</a><br/>
+                            <span style="color: #FF0000;">,</span> <a href='/readme'>readme</a><br/>
+                            <span style="color: #FF0000;">,</span> <a href='https://github.com/thelastinuit'>github</a><br/>
+                            <span style="color: #FF0000;">,</span> <a href='https://blog.aloui.se'>blog</a><br/> 
+                            <span style="color: #FF0000;">,</span> <a href='https://www.youtube.com/@thelastinuit'>vlog</a><br/>
+                            <span style="color: #FF0000;">]</span>
                             </p>
                         </article>
                     </div>
@@ -43,7 +43,7 @@
                             a program writer
                         </div>
                         <div>
-                            חסד של אמת
+                          <span style="color: #FF0000;">חסד של אמת</span>
                         </div>
                     </div>
                 </div>
