--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@ Contact me.
     body { color: #FFFFFF; background: #000000; max-width: 76ch; margin: 0 auto; text-align: center; display: flex;justify-content: center; }
     a:hover,a:link,a:visited,a:active { text-decoration: none; color: #FFFFFF; }
     </style>
+    <script type="text/javascript">
+      window.location.href = "https://thelastinu.it";
+    </script>
   </head>
   <body>
     <div class="sidebar">
@@ -40,9 +43,9 @@ Contact me.
               <br/>
               <span style="color: #FF0000;">חסד של אמת</span><br/><br/>
               <em>
-                If you must inflict pain,<br/>
-                perhaps I can endure<br/> 
-                so others don't suffer<br/>
+                If you must inflict <span style="color: #FF0000;">pain</span>,<br/>
+                perhaps I can <span style="color: #FF0000;">endure</span><br/> 
+                so others don't <span style="color: #FF0000;">suffer</span><br/>
               </em>
             </div>
           </div>
